# advent_of_code

./: .gitignore  README.md  README.txt  puzzles  puzzles-decrypt  runtests  tests-run
2019/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp  CMakeLists.txt  GNUmakefile  advent.cpp  advent.hpp  ansi.cpp  ansi.hpp  grid.cpp  grid.hpp  input.hpp  intcode.cpp  intcode.hpp
2019/tests/01-1/: puzzle.in.gpg  puzzle.out
2019/tests/01-2/: puzzle.out  sample.in
2019/tests/02-1/: puzzle.in.gpg  puzzle.out
2019/tests/02-2/: puzzle.in
2019/tests/03-1/: puzzle.in.gpg
2019/tests/03-2/: puzzle.in  sample-1.in  sample-2.in
2019/tests/04-1/: puzzle.in.gpg
2019/tests/04-2/: puzzle.in
2019/tests/05-1/: puzzle.in.gpg  puzzle.out
2019/tests/05-2/: puzzle.in  puzzle.out
2019/tests/06-1/: puzzle.in.gpg
2019/tests/06-2/: puzzle.in
2019/tests/07-1/: puzzle.in.gpg
2019/tests/08-1/: puzzle.in.gpg
2019/tests/08-2/: puzzle.in  puzzle.out
2019/tests/09-1/: puzzle.in.gpg
2019/tests/09-2/: puzzle.in
2019/tests/10-1/: puzzle.in.gpg
2019/tests/10-2/: puzzle.in  sample-5.in
2019/tests/11-1/: puzzle.in.gpg
2019/tests/11-2/: puzzle.out
2019/tests/12-1/: puzzle.in.gpg  sample-1.env  sample-2.env
2019/tests/12-2/: puzzle.out  sample-2.in
2019/tests/13-1/: puzzle.in.gpg
2019/tests/13-2/: puzzle.in
2019/tests/14-1/: puzzle.in.gpg
2019/tests/14-2/: puzzle.in  puzzle.out  sample-3.in  sample-4.in  sample-5.in
(+636 files in other folders)
